@@ -1,3 +1,8 @@
+2007-06-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (gnome_theme_icon_info_free): plug leak
+	* theme-thumbnail.c: (message_from_child): fix comment
+
 2007-06-09  Denis Washington  <denisw@svn.gnome.org>
 
 	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
